--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,66 @@
     <title>Unit 2 Assessment: HTML/CSS</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
+  <body>
+    <section class="form">
+      <form action="">
+        <div>
+          <label>Character Name:</label>
+          <input type="text">
+        </div>
+        <div>
+          <label for="">Jedi</label>
+          <input type="radio" name="jediType" value="Jedi">
+          <label for="">Sith</label>
+          <input type="radio" name="jediType" value="Sith">
+        </div>
+        <div>
+          <label>Lightsaber color:</label>
+          <select>
+            <option value="blue">Blue</option>
+            <option value="green">Green</option>
+            <option value="yellow">Yellow</option>
+            <option value="red">Red</option>
+          </select>
+        </div>
+        <div>
+          <input type="button" value="Submit">
+        </div>
+      </form>
+    </section>
+    <section class="table">
+      <table>
+        <thead>
+          <tr>
+            <th>Planet</th>
+            <th>Environment</th>
+            <th>Population</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Tatooine</td>
+            <td>Desert</td>
+            <td>200,000</td>
+          </tr>
+          <tr>
+            <td>Hoth</td>
+            <td>Ice</td>
+            <td>0</td>
+          </tr>
+          <tr>
+            <td>Endor</td>
+            <td>Forest</td>
+            <td>30,000,000</td>
+          </tr>
+          <tr>
+            <td>Mustafar</td>
+            <td>Lava</td>
+            <td>10,000</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
 
-  <body></body>
+  </body>
 </html>
