completed HTML and CSS section

--- a/src/index.html
+++ b/src/index.html
@@ -13,23 +13,23 @@
           <label>Character Name:</label>
           <input type="text">
         </div>
-        <div>
+        <div id="radioInput">
           <label for="">Jedi</label>
-          <input type="radio" name="jediType" value="Jedi">
+          <input type="radio" name="jediType" value="jedi">
           <label for="">Sith</label>
-          <input type="radio" name="jediType" value="Sith">
+          <input type="radio" name="jediType" value="sith">
         </div>
         <div>
           <label>Lightsaber color:</label>
-          <select>
+          <select name="lightsaber">
             <option value="blue">Blue</option>
             <option value="green">Green</option>
-            <option value="yellow">Yellow</option>
             <option value="red">Red</option>
+            <option value="purple">Purple</option>
           </select>
         </div>
         <div>
-          <input type="button" value="Submit">
+          <input type="submit" id="subBtn">
         </div>
       </form>
     </section>
